# simple-cpp

./: .gitignore  README.md  roadmap.md
cpp/basics/exceptions/: another_example.c++  exceptions.c++  main  no_exceptions.cpp  simple_exception.c++
cpp/basics/exceptions/comparing1/: not_too_simple_error_code.c++  not_too_simple_exception.c++
cpp/basics/exceptions/custom_exception/: custom_exception.c++
cpp/basics/increment/: main  main.cc
cpp/basics/iterators/: iterators.cc
cpp/basics/memory/: memory.c++
cpp/basics/ref_and_pointers/: functions.cc  main.cc
cpp/basics/template/: box.h  simple.cpp
cpp/classes/: why_use_classes.md
cpp/classes/class-simple/: class-simple.c++  class-simple.md
cpp/classes/destructors-constructors-operators/: destructors-constructors-operators.cc  main  result.txt
cpp/cmake/library_in_library/: CMakeLists.txt
cpp/cmake/library_in_library/dependency/include/dependency/: api.h
cpp/cmake/library_in_library/dependency/src/dependency/: dependency.cc  impl.cc
cpp/cmake/library_in_library/dependency_dir/: CMakeLists.txt
cpp/cmake/library_in_library/dependency_dir/src/dependency/: impl.cc  impl.h
cpp/cmake/library_in_library/src/: main.cpp
cpp/cmake/simple_conan_example/: CMakeLists.txt  README.md  conanfile.py  sus.json
cpp/cmake/simple_conan_example/src/: main.cpp
cpp/cmake/simple_toolchain_example/: CMakeLists.txt  gnu_toolchain.cmake
cpp/cmake/simple_toolchains_example/: CMakeLists.txt  README.md  clang_toolchain.cmake
cpp/collections/array/: array.cc  array.md
cpp/collections/set_map/: set_map.c++  set_map.md
cpp/collections/vector/: vector.cpp  vector.md
cpp/examples/simple-vector/: vec.c++
cpp/faq/conan_vs_submodules/: .~lock.result.odp#
cpp/tricks/map/: convert.cc  simple-cpp.code-workspace
(+1 files in other folders)
